--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,10 @@
 		<script src="heatcanvas/heatcanvas-leaflet.js"></script>
 	</head>
 	<body>
+		<h1>Jüdisches Adressbuch Berlin, 1931</h1>
+		<p>
+			Darstellung der Wohnorte. Mehr Informationen <a href="https://github.com/ssp/juedisches-adressbuch">im github Repository</a>.
+		</p>
 		<div id="map"></div>
 	</body>
 </html>
