während des Ladens Notiz anzeigen

--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,8 @@
 		<p>
 			Darstellung der Wohnorte. Mehr Informationen <a href="https://github.com/ssp/juedisches-adressbuch">im github Repository</a>.
 		</p>
-		<div id="map"></div>
+		<div id="map">
+			<div id="note"></div>
+		</div>
 	</body>
 </html>
