Filtern nach Name und Straße ermöglichen

--- a/web/index.html
+++ b/web/index.html
@@ -26,5 +26,10 @@
 		<div id="map">
 			<div id="note"></div>
 		</div>
+		<div id="filter">
+			<label for="filterField">Filter:</label>
+			<input type="search" id="filterField" placeholder="Name oder Straße">
+			<span class="filterNote"></span>
+		</div>
 	</body>
 </html>
